Fix: mosquitto config hardened to ensure 9001 starts

--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,3 +1,7 @@
+pid_file /var/run/mosquitto/mosquitto.pid
+persistence false
+log_dest stdout
+
 listener 9001 0.0.0.0
 protocol websockets
 allow_anonymous true
