--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aedes": "^0.51.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mqtt": "^5.13.0",
-    "multer": "^2.0.0",
-    "cors": "^2.8.5"
+    "mqtt": "^5.13.1",
+    "multer": "^2.0.1",
+    "ws": "^8.18.2"
   }
 }
